Update Docker configuration and dependencies
- Remove unnecessary apt-get commands from Dockerfile
- Fix Python module execution command
- Update container name from ship_ap to ship_ai
- Add network configuration and specific volume mounts
- Upgrade dependencies: aiogram 3.4.1→3.12.0, openai 1.12.0→1.93.0, python-dotenv 1.0.0→1.1.1

--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -3,7 +3,7 @@
 services:
   bot:
     build: .
-    container_name: ship_ap
+    container_name: ship_ai
     restart: always
     environment:
       - BOT_TOKEN=${BOT_TOKEN}
@@ -11,11 +11,14 @@ services:
       - CHANNEL_NAME=${CHANNEL_NAME}
       - MODEL=${MODEL}
       - DATABASE_FILE=${DATABASE_FILE}
+    networks:
+      - bot_network
     env_file:
       - .env
     volumes:
-      - .:/app
-
+      - ./images:/app/images
+      - ./articles.db:/app/articles.db
+    
 networks:
   bot_network:
     driver: bridge
