--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -6,6 +6,7 @@ services:
     container_name: ship_ai
     restart: always
     environment:
+      - TZ=Europe/Moscow
       - BOT_TOKEN=${BOT_TOKEN}
       - API_KEY=${API_KEY}
       - CHANNEL_NAME=${CHANNEL_NAME}
